--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background: url(https://picsum.photos/1920/1080) no-repeat;
+  background-position: center;
+  background-size: cover;
+}
